add lsp subproject