@@ -58,119 +58,3 @@ subprojects  {
         }
     }
 }
-
-///**
-// * 'gradle run'
-// * <p>
-// * Start the compiler for compiling the example program with the command:
-// */
-//application {
-//    mainClass.set('org.karina.lang.compiler.Main')
-//    applicationDefaultJvmArgs = ['-Dkarina.run=true']
-//}
-
-//
-///**
-// * 'gradle FAT-JAR'
-// * <p>
-// * Creates a jar with all dependencies included.
-// */
-//tasks.register('FAT-JAR', Jar) {
-//    manifest {
-//        attributes 'Main-Class': 'org.karina.lang.compiler.Main'
-//    }
-//    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-//    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
-//    exclude 'META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/INDEX.LIST', 'META-INF/*.MF'
-//
-//    with jar
-//}
-//
-///**
-// * 'gradle LSP'
-// * <p>
-// * Creates the LSP jar with all dependencies.
-// */
-//tasks.register('LSP', Jar) {
-//    manifest {
-//        attributes 'Main-Class': 'org.karina.lang.lsp.Main'
-//    }
-//    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-//    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
-//    exclude 'META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/INDEX.LIST', 'META-INF/*.MF'
-//
-//    with jar
-//
-//    archiveFileName = 'karina-lsp.jar'
-//}
-//
-//
-///**
-// * 'gradle KARINA-BASE'
-// * <p>
-// * Compiles only the karina standard library classes in 'karina/lang/'
-// * Output is a jar file in the resources directory.
-// */
-//tasks.register('KARINA-BASE', Jar) {
-//
-//    archiveBaseName = 'karina-lang'
-//
-//    from sourceSets.main.output
-//    include 'karina/lang/**'
-//
-//    destinationDirectory = file("${projectDir}/src/main/resources")
-//    archiveFileName = 'karina_base.jar'
-//
-//    doLast {
-//        println "Built karina.lang JAR: ${archiveFileName.get()}"
-//        println "Location: ${destinationDirectory.get()}/${archiveFileName.get()}"
-//    }
-//}
-//
-//
-//
-///**
-// * 'gradle CLI'
-// * <p>
-// * Creates a native image of the compiler.
-// * puts in the 'jar' directory inside the build directory.
-// */
-//tasks.register('CLI', Jar) {
-//    manifest {
-//        attributes 'Main-Class': 'org.karina.lang.cli.Main'
-//    }
-//    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-//    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
-//
-//    exclude 'META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/INDEX.LIST', 'META-INF/*.MF'
-//
-//    with jar
-//
-//    archiveFileName = 'jar/karina-cli.jar'
-//}
-//
-//
-///**
-// * 'gradle test'
-// */
-//test {
-//    useJUnitPlatform()
-//    testLogging {
-//        events "passed", "skipped", "failed"
-//    }
-//}
-//
-///**
-// * Enable preview features for everything
-// */
-//tasks.withType(JavaCompile).configureEach {
-//    options.compilerArgs += '--enable-preview'
-//}
-//
-//tasks.withType(JavaExec).configureEach {
-//    jvmArgs += "--enable-preview"
-//}
-//
-//tasks.withType(Test).configureEach {
-//    jvmArgs += '--enable-preview'
-//}
